@@ -2,6 +2,7 @@
 * removed numerous validations
 * removed indifferent access -- all configs are stored and accessed
   by symbol keys
+* configs now do not duplicate default values by default
 * configs now order alphabetically, and have no guaranteed set order
 
 == 0.7.0 / 2010-05-02
